; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/block/extr_genhd.c_unlink_gendisk.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/block/extr_genhd.c_unlink_gendisk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gendisk = type { i32, %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }
%struct.TYPE_4__ = type { i32 }

@.str = private unnamed_addr constant [4 x i8] c"bdi\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @unlink_gendisk(%struct.gendisk* %0) #0 {
  %2 = alloca %struct.gendisk*, align 8
  store %struct.gendisk* %0, %struct.gendisk** %2, align 8
  %3 = load %struct.gendisk*, %struct.gendisk** %2, align 8
  %4 = call %struct.TYPE_4__* @disk_to_dev(%struct.gendisk* %3)
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %6 = call i32 @sysfs_remove_link(i32* %5, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %7 = load %struct.gendisk*, %struct.gendisk** %2, align 8
  %8 = getelementptr inbounds %struct.gendisk, %struct.gendisk* %7, i32 0, i32 1
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %11 = call i32 @bdi_unregister(i32* %10)
  %12 = load %struct.gendisk*, %struct.gendisk** %2, align 8
  %13 = call i32 @blk_unregister_queue(%struct.gendisk* %12)
  %14 = load %struct.gendisk*, %struct.gendisk** %2, align 8
  %15 = call i32 @disk_devt(%struct.gendisk* %14)
  %16 = load %struct.gendisk*, %struct.gendisk** %2, align 8
  %17 = getelementptr inbounds %struct.gendisk, %struct.gendisk* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = call i32 @blk_unregister_region(i32 %15, i32 %18)
  ret void
}

declare dso_local i32 @sysfs_remove_link(i32*, i8*) #1

declare dso_local %struct.TYPE_4__* @disk_to_dev(%struct.gendisk*) #1

declare dso_local i32 @bdi_unregister(i32*) #1

declare dso_local i32 @blk_unregister_queue(%struct.gendisk*) #1

declare dso_local i32 @blk_unregister_region(i32, i32) #1

declare dso_local i32 @disk_devt(%struct.gendisk*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
